k8s/redis/ha/master/service-template.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master-service
  namespace: session-database
  labels:
    app: redis-master
    component: ha
spec:
  selector:
    app: redis-master
    component: ha
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: ${REDIS_NODEPORT}
      name: redis
  type: NodePort
